--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,3 +7,6 @@
 
 // Components
 @import "components/navigation";
+@import "components/memo";
+@import "components/page-title";
+@import "components/container";
