--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,5 +1,9 @@
 // Colors
 $grey: #333333;
+$light-grey: #fafafa;
+$light-grey-border: #eeeeee;
+$light-color: #aaa;
+
 
 // Navigation colors
 $nav-background: $grey;
